--- a/Dream/Dream/Views/OfertaEmpleos/Index.cshtml
+++ b/Dream/Dream/Views/OfertaEmpleos/Index.cshtml
@@ -4,17 +4,119 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<!-- Link hacia el archivo de estilos css -->
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<link rel="stylesheet" href="css/Ofert.css">
+<style type="text/css">
+</style>
+@Styles.Render("~/Content/Ofert.css")
+<script type="text/javascript"></script>
+
+
+<section>
+    <div class="pricing-box mt-4" ">
+        <div class="card mt-5 border-5 pt-2 active pb-0 px-3 ">
+            <div class="card-body ">
+                <div class="row">
+                    <div class="col-12 ">
+                        <h4 class="card-title "><b>Ofertas de Empleo</b></h4>
+
+                    </div>
+                    <div class="col">
+                        <h6 class="card-subtitle mb-2 text-muted">
+                            <p class="card-text text-muted small ">
+                                <img src="https://img.icons8.com/color/26/000000/christmas-star.png" class="mr-1 ">
+                                <img src="https://img.icons8.com/color/26/000000/christmas-star.png" class="mr-1 ">
+                                <img src="https://img.icons8.com/color/26/000000/christmas-star.png" class="mr-1 ">
+                                <img src="https://img.icons8.com/color/26/000000/christmas-star.png" class="mr-1 ">
+                                <img src="https://img.icons8.com/color/26/000000/christmas-star.png" class="mr-1 ">
+                            </p>
+                        </h6>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
+    </div>
+</section>
+
+
+
+<section>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css"
+          integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
+
+    <section class="section" id="pricing">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="title-box text-center">
+                        <h3 class="title-heading mt-4"> </h3>
+                        <p class="text-muted f-17 mt-3">
+
+                        </p>
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-5 pt-4">
+                <div class="col-lg-4">
+                    <div class="pricing-box mt-4">
+                        <img src="~/Content/img/logo.png" height="70" class="mt-3" alt="">
+                        <h4 class="f-20">Oferta</h4>
+
+                        <div class="mt-4 pt-2">
+                            <p>
+                                Vacante:
+
+
+                            </p>
+
+
+                            <p class="mb-2">
+
+                                Numero de vacantes
+
+                            </p>
+                            <p class="mb-2">
+
+                                Salario:
+
+                            </p>
+                            <p class="mb-2">
+
+
+                            </p>
+
+                        </div>
+
+
+
+
+
+
+                        <div class="mt-4 pt-3">
+                            <a href="" class="btn btn-primary btn-rounded">Ver detalles</a>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+</section>
 <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.nombre)
         </th>
         <th>
+
             @Html.DisplayNameFor(model => model.nVacantes)
         </th>
         <th>
@@ -47,47 +149,48 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.nVacantes)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.descripcion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.requerimientos)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.funciones)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Salario)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.prestaciones)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.estado)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Cargo.nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Categoria.nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DatosEmpresa.nombre)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.idOfertaEmpleo }) |
-            @Html.ActionLink("Details", "Details", new { id=item.idOfertaEmpleo }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.idOfertaEmpleo })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.nVacantes)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.descripcion)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.requerimientos)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.funciones)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Salario)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.prestaciones)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.estado)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cargo.nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Categoria.nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DatosEmpresa.nombre)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.idOfertaEmpleo }) |
+                @Html.ActionLink("Details", "Details", new { id = item.idOfertaEmpleo }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.idOfertaEmpleo })
+            </td>
+        </tr>
+    }
 
 </table>
