--- a/Dream/Dream/Views/Login/Index.cshtml
+++ b/Dream/Dream/Views/Login/Index.cshtml
@@ -61,9 +61,9 @@
                 
             </div>
             <p class="p-container">
-                <a href="~/Views/Usuarios/Create.cshtml">Crear cuenta</a>
+                @Html.ActionLink("Crear Cuenta", "EleccionRol")
                 <input type="submit" name="go" id="go" value="Ingresar">
-                
+
             </p>
         </form>
     </body>
