Registros y logica de como funciona
NAZO

--- a/Dream/Dream/Views/HomeEmpleado/Index.cshtml
+++ b/Dream/Dream/Views/HomeEmpleado/Index.cshtml
@@ -29,7 +29,8 @@
                                 </div>
                                 <div class="infos">
 
-                                    <h2>BIENVENIDO USUARIO</h2>
+                                    <h2>BIENVENIDO</h2>
+                                    <h2>Nombre: <strong>@ViewBag.Mensaje</strong></h2>
                                 </div>
 
                             </div>
