--- a/Dream/Dream/Views/HomeEmpresa/Index.cshtml
+++ b/Dream/Dream/Views/HomeEmpresa/Index.cshtml
@@ -5,3 +5,9 @@
 
 <h2>Empresa</h2>
 
+<div class="infos">
+
+    <h2>BIENVENIDO</h2>
+    <h2>Nombre: <strong>@ViewBag.Mensaje</strong></h2>
+</div>
+
