--- a/Dream/Dream/Views/OfertaEmpleos/Details.cshtml
+++ b/Dream/Dream/Views/OfertaEmpleos/Details.cshtml
@@ -4,102 +4,209 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
 
-<div>
-    <h4>OfertaEmpleo</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.nombre)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.nombre)
-        </dd>
+<!-- Link hacia el archivo de estilos css -->
 
-        <dt>
-            @Html.DisplayNameFor(model => model.nVacantes)
-        </dt>
+<link rel="stylesheet" href="css/DetallesOfer.css">
+<style type="text/css">
+</style>
+@Styles.Render("~/Content/DetallesOfer.css")
+<script type="text/javascript"></script>
 
-        <dd>
-            @Html.DisplayFor(model => model.nVacantes)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.descripcion)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.descripcion)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.requerimientos)
-        </dt>
+<main class="[ main ] [ flow ]">
 
-        <dd>
-            @Html.DisplayFor(model => model.requerimientos)
-        </dd>
+    <ul class="cards">
+        <li class="card">
+            <div class="card__img">
+                <div class="img__cover">
+                    <img src="~/Content/img/edificio.jpg" alt="" />
+                </div>
+                <div class="img__profile">
+                    <img src="~/Content/img/logo.png" alt="">
+                </div>
+            </div>
+            <div class="[ card__text ] [ flow ]">
+                <h1>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.funciones)
-        </dt>
+                    @Html.DisplayFor(model => model.nombre)
 
-        <dd>
-            @Html.DisplayFor(model => model.funciones)
-        </dd>
+                </h1>
+                <h3>
+                    Numero de vacantes:
+                    @Html.DisplayFor(model => model.nVacantes)
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Salario)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Salario)
-        </dd>
+                </h3>
+                <h3>
+                    Cargo:
+                    @Html.DisplayFor(model => model.Cargo.nombre)
 
-        <dt>
-            @Html.DisplayNameFor(model => model.prestaciones)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.prestaciones)
-        </dd>
+                </h3>
+                <h3>
+                    Descripcion:
+                    @Html.DisplayFor(model => model.descripcion)
 
-        <dt>
-            @Html.DisplayNameFor(model => model.estado)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.estado)
-        </dd>
+                </h3>
+                <h3>
+                    Requeriminetos:
+                    @Html.DisplayFor(model => model.requerimientos)
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Cargo.nombre)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Cargo.nombre)
-        </dd>
+                </h3>
+                <h3>
+                    Funciones:
+                    @Html.DisplayFor(model => model.funciones)
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Categoria.nombre)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Categoria.nombre)
-        </dd>
+                </h3>
+                <h3>
+                    Salario:
+                    @Html.DisplayFor(model => model.Salario)
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DatosEmpresa.nombre)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.DatosEmpresa.nombre)
-        </dd>
+                </h3>
+                <h3>
+                    Prestaciones:
+                    @Html.DisplayFor(model => model.prestaciones)
 
-    </dl>
-</div>
+
+                </h3>
+
+                <h3>
+                    Datos empresa:
+                    @Html.DisplayFor(model => model.DatosEmpresa.nombre)
+
+
+                </h3>
+                <h3>
+                    Categoria:
+                    @Html.DisplayFor(model => model.Categoria.nombre)
+
+
+                </h3>
+            </div>
+        </li>
+    </ul>
+</main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@*<div>
+        <h4>OfertaEmpleo</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.nombre)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.nombre)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.nVacantes)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.nVacantes)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.descripcion)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.descripcion)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.requerimientos)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.requerimientos)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.funciones)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.funciones)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Salario)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Salario)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.prestaciones)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.prestaciones)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.estado)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.estado)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Cargo.nombre)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Cargo.nombre)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Categoria.nombre)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Categoria.nombre)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.DatosEmpresa.nombre)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.DatosEmpresa.nombre)
+            </dd>
+
+        </dl>
+    </div>*@
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.idOfertaEmpleo }) |
     @Html.ActionLink("Back to List", "Index")
