Arreglo de bd y controller
NAZO

--- a/Dream/Dream/Views/OfertaEmpleos/Details.cshtml
+++ b/Dream/Dream/Views/OfertaEmpleos/Details.cshtml
@@ -43,7 +43,7 @@
                 </h3>
                 <h3>
                     Cargo:
-                    @Html.DisplayFor(model => model.Cargo.nombre)
+                    @Html.DisplayFor(model => model.cargo)
 
 
                 </h3>
