--- a/Dream/Dream/Views/HomeEmpresa/Index.cshtml
+++ b/Dream/Dream/Views/HomeEmpresa/Index.cshtml
@@ -3,11 +3,212 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Empresa</h2>
 
-<div class="infos">
+<!-- Link hacia el archivo de estilos css -->
 
-    <h2>BIENVENIDO</h2>
-    <h2>Nombre: <strong>@ViewBag.Mensaje</strong></h2>
+<link rel="stylesheet" href="css/HomeEmpresa.css">
+<style type="text/css">
+</style>
+@Styles.Render("~/Content/HomeEmpresa.css")
+<script type="text/javascript"></script>
+
+<div class="container db-social">
+    <div class="jumbotron jumbotron-fluid"></div>
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="col-xl-11">
+                <div class="widget head-profile has-shadow">
+                    <div class="widget-body pb-0">
+                        <div class="row d-flex align-items-center">
+                            <div class="col-xl-4 col-md-4 d-flex justify-content-lg-start justify-content-md-start justify-content-center">
+                                <ul>
+                                </ul>
+                            </div>
+                            <div class="col-xl-4 col-md-4 d-flex justify-content-center">
+                                <div class="image-default">
+                                    <img class="rounded-circle" src="~/Content/img/logo.png" alt="...">
+                                </div>
+                                <div class="infos">
+
+                                    <h2>BIENVENIDO</h2>
+                                    <h2>Nombre: <strong>@ViewBag.Mensaje</strong></h2>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css"
+      integrity="sha512-QKC1UZ/ZHNgFzVKSAhV5v5j73eeL9EEN289eKAEFaAjgAiobVAnVv/AGuPbXsKl1dNoel3kNr6PYnSiTzVVBCw==" crossorigin="anonymous" />
+
+<section>
+    <div class="container">
+
+        <div class="section-heading title-style4 border-bottom padding-25px-bottom sm-padding-15px-bottom">
+
+        </div>
+
+        <div class="row mt-60">
+            <div class="col-lg-4 col-md-6 margin-30px-bottom xs-margin-20px-bottom">
+                <div class="service-block4 h-100">
+                    <div class="service-icon">
+                        <i class="icon-tools"></i>
+                    </div>
+                    <div class="service-desc">
+                        <h4>Contant Marketing</h4>
+                        <h5>Market Plan</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 margin-30px-bottom xs-margin-20px-bottom">
+                <div class="service-block4 h-100">
+                    <div class="service-icon">
+
+                    </div>
+                    <div class="service-desc">
+                        <h4>Saving Investments</h4>
+                        <h5>Finance Plan</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 margin-30px-bottom xs-margin-20px-bottom">
+                <div class="service-block4 h-100">
+                    <div class="service-icon">
+                        <i class="icon-hotairballoon"></i>
+                    </div>
+                    <div class="service-desc">
+                        <h4>Detail Report</h4>
+                        <h5>Detail Plan</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="container bootstrap snippets bootdey">
+    <div class="row">
+        <div class="col-md-6">
+            <section class="widget">
+
+                <div class="widget-body">
+                    <div class="widget-top-overflow text-white">
+                        <img src="~/Content/img/programadora.jpg">
+                        <ul class="tags text-white pull-right">
+                            <li><a href="#">Ver empleos</a></li>
+
+                        </ul>
+                    </div>
+                    <div class="post-user mt-sm">
+                        <span class="thumb pull-left mr">
+                            <img class="img-circle" src="~/Content/img/logo.png" alt="...">
+                        </span>
+                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Maryna</span> Nilson</h5>
+
+                    </div>
+                    <p class="text-light fs-mini m">
+                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
+                        thoughts, ideas.
+                    </p>
+                </div>
+
+            </section>
+        </div>
+        <div class="col-md-6">
+            <section class="widget">
+
+                <div class="widget-body">
+                    <div class="widget-top-overflow text-white">
+                        <img src="~/Content/img/economista.jpg">
+                        <ul class="tags text-white pull-right">
+                            <li><a href="#">Ver empleos</a></li>
+
+                        </ul>
+                    </div>
+                    <div class="post-user mt-sm">
+                        <span class="thumb pull-left mr">
+                            <img class="img-circle" src="~/Content/img/logo.png" alt="...">
+                        </span>
+                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Maryna</span> Nilson</h5>
+
+                    </div>
+                    <p class="text-light fs-mini m">
+                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
+                        thoughts, ideas.
+                    </p>
+                </div>
+
+            </section>
+        </div>
+    </div>
+</div>
+
+<div class="container bootstrap snippets bootdey">
+    <div class="row">
+        <div class="col-md-6">
+            <section class="widget">
+
+                <div class="widget-body">
+                    <div class="widget-top-overflow text-white">
+                        <img src="~/Content/img/aula-de-clase-con-ninos-y-maestra.jpg">
+                        <ul class="tags text-white pull-right">
+                            <li><a href="#">Ver empleos</a></li>
+
+                        </ul>
+                    </div>
+                    <div class="post-user mt-sm">
+                        <span class="thumb pull-left mr">
+                            <img class="img-circle" src="~/Content/img/logo.png" alt="...">
+                        </span>
+                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Maryna</span> Nilson</h5>
+
+                    </div>
+                    <p class="text-light fs-mini m">
+                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
+                        thoughts, ideas.
+                    </p>
+                </div>
+
+            </section>
+        </div>
+        <div class="col-md-6">
+            <section class="widget">
+
+                <div class="widget-body">
+                    <div class="widget-top-overflow text-white">
+                        <img src="~/Content/img/bombero.jpg">
+                        <ul class="tags text-white pull-right">
+                            <li><a href="#">Ver empleos</a></li>
+
+                        </ul>
+                    </div>
+                    <div class="post-user mt-sm">
+                        <span class="thumb pull-left mr">
+                            <img class="img-circle" src="~/Content/img/logo.png" alt="...">
+                        </span>
+                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Maryna</span> Nilson</h5>
+
+                    </div>
+                    <p class="text-light fs-mini m">
+                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
+                        thoughts, ideas.
+                    </p>
+                </div>
+
+            </section>
+        </div>
+    </div>
 </div>
 
