--- a/Dream/Dream/Views/HomeEmpleado/Index.cshtml
+++ b/Dream/Dream/Views/HomeEmpleado/Index.cshtml
@@ -49,7 +49,6 @@
     <div class="container">
 
         <div class="section-heading title-style4 border-bottom padding-25px-bottom sm-padding-15px-bottom">
-
         </div>
 
         <div class="row mt-60">
@@ -104,9 +103,9 @@
 
                 <div class="widget-body">
                     <div class="widget-top-overflow text-white">
-                        <img src="~/Content/img/chef-una-profesion-revista-edu-co.jpg">
+                        <img src="~/Content/img/Mercadeo.jpg">
                         <ul class="tags text-white pull-right">
-                            <li><a href="#">Ver empleos</a></li>
+                            <li><a href="/HomeEmpleado/PaginaMercadeo">Ver empleos</a></li>
 
                         </ul>
                     </div>
@@ -114,7 +113,7 @@
                         <span class="thumb pull-left mr">
                             <img class="img-circle" src="~/Content/img/logo.png" alt="...">
                         </span>
-                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Maryna</span> Nilson</h5>
+                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Mercadeo</h5>
 
                     </div>
                     <p class="text-light fs-mini m">
@@ -130,9 +129,9 @@
 
                 <div class="widget-body">
                     <div class="widget-top-overflow text-white">
-                        <img src="~/Content/img/aula-de-clase-con-ninos-y-maestra.jpg">
+                        <img src="~/Content/img/programadora.jpg">
                         <ul class="tags text-white pull-right">
-                            <li><a href="#">Ver empleos</a></li>
+                            <li><a href="/HomeEmpleado/PaginaTecnologia">Ver empleos</a></li>
 
                         </ul>
                     </div>
@@ -140,7 +139,7 @@
                         <span class="thumb pull-left mr">
                             <img class="img-circle" src="~/Content/img/logo.png" alt="...">
                         </span>
-                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Maryna</span> Nilson</h5>
+                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Tecnologia</h5>
 
                     </div>
                     <p class="text-light fs-mini m">
@@ -161,9 +160,9 @@
 
                 <div class="widget-body">
                     <div class="widget-top-overflow text-white">
-                        <img src="~/Content/img/chef-una-profesion-revista-edu-co.jpg">
+                        <img src="~/Content/img/SS.jpg">
                         <ul class="tags text-white pull-right">
-                            <li><a href="#">Ver empleos</a></li>
+                            <li><a href="/HomeEmpleado/PaginaRecursosHumanos">Ver empleos</a></li>
 
                         </ul>
                     </div>
@@ -171,7 +170,7 @@
                         <span class="thumb pull-left mr">
                             <img class="img-circle" src="~/Content/img/logo.png" alt="...">
                         </span>
-                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Maryna</span> Nilson</h5>
+                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Recursos Humanos</h5>
 
                     </div>
                     <p class="text-light fs-mini m">
@@ -187,9 +186,9 @@
 
                 <div class="widget-body">
                     <div class="widget-top-overflow text-white">
-                        <img src="~/Content/img/aula-de-clase-con-ninos-y-maestra.jpg">
+                        <img src="~/Content/img/contador.jpg">
                         <ul class="tags text-white pull-right">
-                            <li><a href="#">Ver empleos</a></li>
+                            <li><a href="/HomeEmpleado/PaginaContabilidad">Ver empleos</a></li>
 
                         </ul>
                     </div>
@@ -197,7 +196,64 @@
                         <span class="thumb pull-left mr">
                             <img class="img-circle" src="~/Content/img/logo.png" alt="...">
                         </span>
-                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Maryna</span> Nilson</h5>
+                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Contabilidad</h5>
+
+                    </div>
+                    <p class="text-light fs-mini m">
+                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
+                        thoughts, ideas.
+                    </p>
+                </div>
+
+            </section>
+        </div>
+    </div>
+</div>
+
+<div class="container bootstrap snippets bootdey">
+    <div class="row">
+        <div class="col-md-6">
+            <section class="widget">
+
+                <div class="widget-body">
+                    <div class="widget-top-overflow text-white">
+                        <img src="~/Content/img/Salud.jpg">
+                        <ul class="tags text-white pull-right">
+                            <li><a href="/HomeEmpleado/PaginaSalud">Ver empleos</a></li>
+
+                        </ul>
+                    </div>
+                    <div class="post-user mt-sm">
+                        <span class="thumb pull-left mr">
+                            <img class="img-circle" src="~/Content/img/logo.png" alt="...">
+                        </span>
+                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Salud</h5>
+
+                    </div>
+                    <p class="text-light fs-mini m">
+                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
+                        thoughts, ideas.
+                    </p>
+                </div>
+
+            </section>
+        </div>
+        <div class="col-md-6">
+            <section class="widget">
+
+                <div class="widget-body">
+                    <div class="widget-top-overflow text-white">
+                        <img src="~/Content/img/Construccion.jpg">
+                        <ul class="tags text-white pull-right">
+                            <li><a href="/HomeEmpleado/PaginaConstruccion">Ver empleos</a></li>
+
+                        </ul>
+                    </div>
+                    <div class="post-user mt-sm">
+                        <span class="thumb pull-left mr">
+                            <img class="img-circle" src="~/Content/img/logo.png" alt="...">
+                        </span>
+                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Construccion</h5>
 
                     </div>
                     <p class="text-light fs-mini m">
