--- a/Dream/Dream/Views/HomeEmpresa/Index.cshtml
+++ b/Dream/Dream/Views/HomeEmpresa/Index.cshtml
@@ -32,6 +32,9 @@
 
                                     <h2>BIENVENIDO</h2>
                                     <h2>Nombre: <strong>@ViewBag.Mensaje</strong></h2>
+                                    <div class="btn-volver">
+                                        @Html.ActionLink("Crear", "Create","OfertaEmpleos")
+                                    </div>
                                 </div>
 
                             </div>
@@ -105,9 +108,10 @@
 
                 <div class="widget-body">
                     <div class="widget-top-overflow text-white">
-                        <img src="~/Content/img/programadora.jpg">
+                        <img src="~/Content/img/Mercadeo.jpg">
                         <ul class="tags text-white pull-right">
-                            <li><a href="#">Ver empleos</a></li>
+
+                            <li><a href="/HomeEmpresa/PaginaMercadeo">Ver empleos</a></li>
 
                         </ul>
                     </div>
@@ -115,7 +119,7 @@
                         <span class="thumb pull-left mr">
                             <img class="img-circle" src="~/Content/img/logo.png" alt="...">
                         </span>
-                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Maryna</span> Nilson</h5>
+                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Mercadeo</h5>
 
                     </div>
                     <p class="text-light fs-mini m">
@@ -131,9 +135,9 @@
 
                 <div class="widget-body">
                     <div class="widget-top-overflow text-white">
-                        <img src="~/Content/img/economista.jpg">
+                        <img src="~/Content/img/programadora.jpg">
                         <ul class="tags text-white pull-right">
-                            <li><a href="#">Ver empleos</a></li>
+                            <li><a href="/HomeEmpresa/PaginaTecnologia">Ver empleos</a></li>
 
                         </ul>
                     </div>
@@ -141,7 +145,7 @@
                         <span class="thumb pull-left mr">
                             <img class="img-circle" src="~/Content/img/logo.png" alt="...">
                         </span>
-                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Maryna</span> Nilson</h5>
+                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Tecnologia</h5>
 
                     </div>
                     <p class="text-light fs-mini m">
@@ -162,9 +166,9 @@
 
                 <div class="widget-body">
                     <div class="widget-top-overflow text-white">
-                        <img src="~/Content/img/aula-de-clase-con-ninos-y-maestra.jpg">
+                        <img src="~/Content/img/SS.jpg">
                         <ul class="tags text-white pull-right">
-                            <li><a href="#">Ver empleos</a></li>
+                            <li><a href="/HomeEmpresa/PaginaRecursosHumanos">Ver empleos</a></li>
 
                         </ul>
                     </div>
@@ -172,7 +176,7 @@
                         <span class="thumb pull-left mr">
                             <img class="img-circle" src="~/Content/img/logo.png" alt="...">
                         </span>
-                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Maryna</span> Nilson</h5>
+                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Recursos Humanos</h5>
 
                     </div>
                     <p class="text-light fs-mini m">
@@ -188,9 +192,9 @@
 
                 <div class="widget-body">
                     <div class="widget-top-overflow text-white">
-                        <img src="~/Content/img/bombero.jpg">
+                        <img src="~/Content/img/contador.jpg">
                         <ul class="tags text-white pull-right">
-                            <li><a href="#">Ver empleos</a></li>
+                            <li><a href="/HomeEmpresa/PaginaContabilidad">Ver empleos</a></li>
 
                         </ul>
                     </div>
@@ -198,7 +202,7 @@
                         <span class="thumb pull-left mr">
                             <img class="img-circle" src="~/Content/img/logo.png" alt="...">
                         </span>
-                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Maryna</span> Nilson</h5>
+                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Contabilidad</h5>
 
                     </div>
                     <p class="text-light fs-mini m">
@@ -209,6 +213,64 @@
 
             </section>
         </div>
+
+    </div>
+</div>
+<div class="container bootstrap snippets bootdey">
+    <div class="row">
+        <div class="col-md-6">
+            <section class="widget">
+
+                <div class="widget-body">
+                    <div class="widget-top-overflow text-white">
+                        <img src="~/Content/img/Salud.jpg">
+                        <ul class="tags text-white pull-right">
+                            <li><a href="/HomeEmpresa/PaginaSalud">Ver empleos</a></li>
+
+                        </ul>
+                    </div>
+                    <div class="post-user mt-sm">
+                        <span class="thumb pull-left mr">
+                            <img class="img-circle" src="~/Content/img/logo.png" alt="...">
+                        </span>
+                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Salud</h5>
+
+                    </div>
+                    <p class="text-light fs-mini m">
+                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
+                        thoughts, ideas.
+                    </p>
+                </div>
+
+            </section>
+        </div>
+        <div class="col-md-6">
+            <section class="widget">
+
+                <div class="widget-body">
+                    <div class="widget-top-overflow text-white">
+                        <img src="~/Content/img/Construccion.jpg">
+                        <ul class="tags text-white pull-right">
+                            <li><a href="/HomeEmpresa/PaginaConstruccion">Ver empleos</a></li>
+
+                        </ul>
+                    </div>
+                    <div class="post-user mt-sm">
+                        <span class="thumb pull-left mr">
+                            <img class="img-circle" src="~/Content/img/logo.png" alt="...">
+                        </span>
+                        <h5 class="mb-xs mt-xs"><span class="fw-semi-bold">Construccion</h5>
+
+                    </div>
+                    <p class="text-light fs-mini m">
+                        Lots of cool stuff is happening around you. Just calm down for a sec and listen. Colors, sounds,
+                        thoughts, ideas.
+                    </p>
+                </div>
+
+            </section>
+        </div>
+
     </div>
 </div>
 
