--- a/Dream/Dream/Views/Usuarios/Create.cshtml
+++ b/Dream/Dream/Views/Usuarios/Create.cshtml
@@ -27,7 +27,8 @@
             </p>
             <div class="form-group">
                 <p class="p-container">
-                    <input type="submit" name="go" id="go" value="Registrarse">
+                    <input type="submit" name="go" id="go" value="Create">
+                    
                 </p>
             </div>
         </div>
