--- a/Dream/Dream/Views/OfertaEmpleos/Details.cshtml
+++ b/Dream/Dream/Views/OfertaEmpleos/Details.cshtml
@@ -209,5 +209,5 @@
     </div>*@
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.idOfertaEmpleo }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "TodasLasOfertas")
 </p>
