--- a/Dream/Dream/Views/OfertaEmpleos/Edit.cshtml
+++ b/Dream/Dream/Views/OfertaEmpleos/Edit.cshtml
@@ -101,8 +101,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.idDatosEmpresa, "idDatosEmpresa", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("idDatosEmpresa", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.idDatosEmpresa, "", new { @class = "text-danger" })
+            <strong>@ViewBag.Mensaje</strong>
         </div>
     </div>
 
@@ -115,5 +114,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "TodasLasOfertas")
 </div>
