--- a/Dream/Dream/Views/OfertaEmpleos/TodasLasOfertas.cshtml
+++ b/Dream/Dream/Views/OfertaEmpleos/TodasLasOfertas.cshtml
@@ -43,7 +43,7 @@
 </section>
 
 <div class="btn-volver">
-    @*@Html.ActionLink("Crear", "Create")*@
+    @Html.ActionLink("Crear", "Create")
 </div>
 <div class="container">
     <div class="row">
@@ -68,14 +68,14 @@
                             </p>
                             <p class="mb-2">
                                 <div class="btn-detalle" style="margin: 10px 33px;">
-                                    @Html.ActionLink("Detalles", "Details2", new { id = item.idOfertaEmpleo })
+                                    @Html.ActionLink("Detalles", "Details", new { id = item.idOfertaEmpleo })
                                 </div>
                                 @*<div class="btn-detalle" style="margin: 5px 2px;">
-                    @Html.ActionLink("Actualizar", "Edit", new { id = item.idOfertaEmpleo })
-                </div>
-                <div class="btn-detalle" style="margin: 5px 101px;">
-                    @Html.ActionLink("Eliminar", "Delete", new { id = item.idOfertaEmpleo })
-                </div>*@
+                                        @Html.ActionLink("Actualizar", "Edit", new { id = item.idOfertaEmpleo })
+                                    </div>
+                                    <div class="btn-detalle" style="margin: 5px 101px;">
+                                        @Html.ActionLink("Eliminar", "Delete", new { id = item.idOfertaEmpleo })
+                                    </div>*@
                             </p>
                         </div>
 
@@ -83,13 +83,13 @@
 
                     </div>
 
-                   
 
-                   
 
-                        
 
-                   
+
+
+
+
                 </div>
             </div>
         }
@@ -157,7 +157,7 @@
             </div>
 
     </section>*@
-            @*}*@
+@*}*@
 
 @*</section>*@
 
