Un monton de cambios
NAZO

--- a/Dream/Dream/Views/DatosEmpresas/Create.cshtml
+++ b/Dream/Dream/Views/DatosEmpresas/Create.cshtml
@@ -2,14 +2,17 @@
 
 @{
     ViewBag.Title = "Create";
+    Layout = null;
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
 }
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>DatosEmpresa</h4>
         <hr />
@@ -54,7 +57,7 @@
             </div>
         </div>
 
-       
+
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
