--- a/Dream/Dream/Views/Shared/_LayoutEmpreado.cshtml
+++ b/Dream/Dream/Views/Shared/_LayoutEmpreado.cshtml
@@ -54,7 +54,7 @@
             <li class="has-subnav">
                 <span class="nav-text">
                     <img src="~/Content/img/oferta1.png" width="30" />
-                    @Html.ActionLink("Ver Ofertas", "Index", "OfertaEmpleos")
+                    @Html.ActionLink("Ver Ofertas", "TodasLasOfertas", "OfertaEmpleos")
                 </span>
                 <br />
             </li>
