--- a/Dream/Dream/Views/Curriculu/Create.cshtml
+++ b/Dream/Dream/Views/Curriculu/Create.cshtml
@@ -4,6 +4,7 @@
     
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    Layout = null;
 }
 
 <!DOCTYPE html>
@@ -164,8 +165,5 @@
         </div>
     }
 
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
 </body>
 </html>
