--- a/Dream/Dream/Views/Curriculu/Details.cshtml
+++ b/Dream/Dream/Views/Curriculu/Details.cshtml
@@ -1,170 +1,216 @@
-﻿@model Dream.Models.Curriculum
+﻿@model IEnumerable<Dream.Models.Curriculum>
 
 @{
-    Layout = null;
+    ViewBag.Title = "Index";
 }
 
-<!DOCTYPE html>
+<!-- Link hacia el archivo de estilos css -->
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
-    <div>
-        <h4>Curriculum</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.nombre)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.nombre)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.apellido)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.apellido)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.edad)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.edad)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.genero)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.genero)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.direccion)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.direccion)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.telefono)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.telefono)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.dui)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.dui)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.licencia)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.licencia)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.nivelAcademico)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.nivelAcademico)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.historialAcademico)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.historialAcademico)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.referenciaPers)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.referenciaPers)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.experienciaLab)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.experienciaLab)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.descripcion)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.descripcion)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.correoOpc)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.correoOpc)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.segundoIdioma)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.segundoIdioma)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.imagen)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.imagen)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.estado)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.estado)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Usuario.correo)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Usuario.correo)
-            </dd>
-    
-        </dl>
+<link rel="stylesheet" href="css/Curri.css">
+<style type="text/css">
+</style>
+@Styles.Render("~/Content/Curri.css")
+<script type="text/javascript"></script>
+
+
+<a href="https://icons8.com/icon/kDoeg22e5jUY/male-user"></a> <a href="https://icons8.com"></a>
+
+<div class="container">
+
+
+    <section>
+        <div class="pricing-box mt-4" ">
+            <div class="card mt-5 border-5 pt-2 active pb-0 px-3 ">
+                <div class="card-body ">
+                    <div class="row">
+                        <div class="col-12 ">
+                            <h4 class="card-title "><b>Perfil de Usuario</b></h4>
+
+                        </div>
+                        <div class="col">
+                            <h6 class="card-subtitle mb-2 text-muted">
+                                <p class="card-text text-muted small ">
+
+                                    <img width="48" height="48" src="https://img.icons8.com/fluency/48/user-male-circle.png" alt="user-male-circle" />
+
+                                </p>
+                            </h6>
+                        </div>
+                    </div>
+
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+
+
+
+    <div class="main-body">
+
+
+        <div class="row gutters-sm">
+
+            @foreach (var item in Model)
+            {
+
+                <div class="col-md-4 mb-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex flex-column align-items-center text-center">
+                                <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+                                <div class="mt-3">
+                                    <h4>  @Html.DisplayFor(modelItem => item.nombre)  @Html.DisplayFor(modelItem => item.apellido)</h4>
+                                    <p class="text-muted font-size-sm">Nivel academico:  @Html.DisplayFor(modelItem => item.nivelAcademico)</p>
+                                    <p class="text-muted font-size-sm">Direccion: @Html.DisplayFor(modelItem => item.direccion)</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mt-3">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <p>Decripcion personal</p>
+                                <span class="text-secondary"> @Html.DisplayFor(modelItem => item.descripcion)</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <p>Correo:</p>
+                                <span class="text-secondary">  @Html.DisplayFor(modelItem => item.Usuario.correo)</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <p>Segundo Idioma:</p>
+                                <span class="text-secondary">@Html.DisplayFor(modelItem => item.segundoIdioma)</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <p>Correo Secundario:</p>
+                                <span class="text-secondary"> @Html.DisplayFor(modelItem => item.correoOpc)</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <p>Licencia</p>
+                                <span class="text-secondary">   @Html.DisplayFor(modelItem => item.licencia)</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <p>Telefono</p>
+                                <span class="text-secondary">@Html.DisplayFor(modelItem => item.telefono)</span>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div><div class="col-md-8">
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Nombre</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Html.DisplayFor(modelItem => item.nombre)
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Apellidos</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Html.DisplayFor(modelItem => item.apellido)
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Edad</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Html.DisplayFor(modelItem => item.edad)
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Genero</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Html.DisplayFor(modelItem => item.genero)
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Numero de Dui</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Html.DisplayFor(modelItem => item.dui)
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Historial Academico</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Html.DisplayFor(modelItem => item.historialAcademico)
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Experiencia Laboral</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Html.DisplayFor(modelItem => item.experienciaLab)
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Feferencias </h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    @Html.DisplayFor(modelItem => item.referenciaPers)
+                                </div>
+                            </div>
+                            <hr>
+
+
+                        </div>
+
+
+
+                    </div>
+
+
+
+
+
+                </div>
+
+
+
+
+
+            }
+            @Html.ActionLink("Atras", "Index2", null, new { @class = "btn btn-blanco" })
+
+
+        </div>
+
     </div>
-    <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.idCurriculum }) |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
-</body>
-</html>
+
+</div>
+
+<style>
+    .btn-blanco {
+        background-color: #fff;
+        color: #000;
+        padding: 10px 20px;
+        border: 1px solid #000;
+        text-decoration: none;
+        width: 200px; /* Ajusta el valor del ancho según tus necesidades */
+        /* Agrega cualquier otro estilo personalizado que desees */
+    }
+
+</style>
+
