--- a/Dream/Dream/Views/Curriculu/Index.cshtml
+++ b/Dream/Dream/Views/Curriculu/Index.cshtml
@@ -61,9 +61,9 @@
                             <div class="d-flex flex-column align-items-center text-center">
                                 <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
                                 <div class="mt-3">
-                                    <h4>  @Html.DisplayFor(modelItem => item.nombre)</h4>
-                                    <p class="text-secondary mb-1">  @Html.DisplayFor(modelItem => item.nivelAcademico)</p>
-                                    <p class="text-muted font-size-sm"> @Html.DisplayFor(modelItem => item.direccion)</p>
+                                    <h4>  @Html.DisplayFor(modelItem => item.nombre)  @Html.DisplayFor(modelItem => item.apellido)</h4>
+                                    <p class="text-muted font-size-sm">Nivel academico:  @Html.DisplayFor(modelItem => item.nivelAcademico)</p>
+                                    <p class="text-muted font-size-sm">Direccion: @Html.DisplayFor(modelItem => item.direccion)</p>
 
                                 </div>
                             </div>
