--- a/Dream/Dream/Views/DatosEmpresas/Details.cshtml
+++ b/Dream/Dream/Views/DatosEmpresas/Details.cshtml
@@ -70,5 +70,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.idDatosEmpresa }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", "HomeEmpresa")
 </p>
