--- a/Dream/Dream/Views/OfertaEmpleos/Edit.cshtml
+++ b/Dream/Dream/Views/OfertaEmpleos/Edit.cshtml
@@ -80,13 +80,13 @@
         </div>
     </div>
 
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.LabelFor(model => model.estado, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.estado, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.estado, "", new { @class = "text-danger" })
         </div>
-    </div>
+    </div>*@
 
     <div class="form-group">
         @Html.LabelFor(model => model.idCategoria, "idCategoria", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -98,13 +98,7 @@
 
 
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.idDatosEmpresa, "idDatosEmpresa", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            <strong>@ViewBag.Mensaje</strong>
-        </div>
-    </div>
-
+   
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Save" class="btn btn-default" />
